# smart-minutes-ai

./: .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  Smart_Minutes_AI_Portable_회사_PC_사용법.md  package.json  roadmap.md  todo.md
backend/: analysis_jobs.py  app_api.py  config.json  config_normalization.py  desktop_server.py  download_ffmpeg.py  download_models.py  dry_run.py  generate_test_audio.py  job_checkpoints.py  main.py  model_manager.py  ollama_utils.py  process_utils.py  requirements.txt  storage_preflight.py  test_api.py  test_job_checkpoints.py  test_storage_preflight.py  test_transcribe.py  test_transcript_postprocessing.py
configs/: asr-models.json
desktop-app/: .env.desktop  .gitignore  README.md  e2e-smoke.cjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
desktop-app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/src/: lib.rs  main.rs
docs/: asr-model-benchmark.md  asr-model-comparison-20260507.md  audio-long-file-processing-plan.md  audio-performance-improvement-log.md  audio-preprocessing-eval-template.csv  audio-preprocessing-notes.md  audio-preprocessing-test-plan.md  audio-regression-manifest.csv  audio-testset-manifest-template.csv  audio-testset-manifest.csv  design-system.md  design.md  frontend-simulation-testing.md  history-right-pane-ux-plan.md  lmo-meeting-insight-company-pc-guide.md  long-video-auto-processing-ux-plan.md  qwen-vs-faster-whisper-test-plan.md  review-request-guide.html  transcript-editing-design.md  (+3 more)
(+90 files in other folders)
