[package]
name = "smart-minutes-ai"
version = "0.1.0"
description = "Local AI meeting minutes desktop app"
authors = ["NIFS AI"]
edition = "2021"
build = "build.rs"

[lib]
name = "smart_minutes_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
